--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -50,6 +50,12 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-12">
+          <label class="form-label">Collection Format: </label> &nbsp; {{labelForFormat(entity.format)}}
+        </div>
+      </div>
+
 
       <div class="row">
         <div class="col-md-6">
@@ -155,7 +161,7 @@
             <tab heading="raw" (selectTab)="onSelect('image')">
               <i *ngIf="loading" class="fa fa-spinner fa-spin" style="margin-left:50%;"></i>
 
-              <div class="image-list-container">
+              <div *ngIf="!entity?.format || entity.format.startsWith('STILL_')" class="image-list-container">
 
                 <ul class="list-group list-group-horizontal flex-wrap">
                   <li
@@ -180,8 +186,45 @@
                   </li>
                 </ul>
               </div>
-            </tab>
 
+              <!--Video raw-->
+              <div *ngIf="entity.format && entity.format.startsWith('VIDEO_') && video.src !== null">
+                <div class="row">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-10">
+                    <h3>
+                      {{video.name}}
+                      <a (click)="handleDownloadVideo(video.src)"><i class="fas fa-download"></i></a>
+                      <a class="float-end" (click)="closeVideo()"><i class="fa fa-times" aria-hidden="true"></i></a>
+                    </h3>
+                  </div>
+                  <div class="col-md-1"></div>
+                </div>
+                <div class="row">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-10">
+                    <video style="width:100%" controls>
+                      <source [src]="video.src" type="video/mp4" />
+                      Browser not supported
+                    </video>
+                  </div>
+                  <div class="col-md-1"></div>
+                </div>
+              </div>
+
+              <div *ngIf="this.entity?.format && this.entity.format.startsWith('VIDEO_')" class="image-list-container">
+                <ul class="list-group row">
+                  <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
+                    <div class="thumbnail" (click)="showVideo(item)">
+                      <img [src]="context + '/assets/thumbnail-video.png'" alt="Video">
+                      <div class="caption">
+                        <h4 class="media-heading">{{item.name}}</h4>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </tab>
             <tab heading="supporting data" (selectTab)="onSelect('data')">
               <i *ngIf="loading" class="fa fa-spinner fa-spin" style="margin-left:50%;"></i>
 
@@ -207,9 +250,8 @@
 
               </table>
             </tab>
-
-
-            <tab heading="video" (selectTab)="onSelect('video')">
+            <!--Legacy collection (before 'format' attribute existed)-->
+            <tab *ngIf="!entity.format" heading="video" (selectTab)="onSelect('video')">
               <i *ngIf="loading" class="fa fa-spinner fa-spin" style="margin-left:50%;"></i>
 
               <div *ngIf="video.src !== null">
@@ -249,6 +291,7 @@
                 </ul>
               </div>
             </tab>
+            <!--End legacy support-->
             <tab heading="products" style="margin-top:10px;" (selectTab)="onSelect('artifacts')">
               <artifact-page *ngIf="tabName === 'artifacts'" [entity]="entity" [processRunning]="processRunning"
                 (onError)="error($event)"></artifact-page>
