--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -215,7 +215,7 @@
               <div *ngIf="this.entity?.format && this.entity.format.startsWith('VIDEO_')" class="image-list-container">
                 <ul class="list-group row">
                   <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
-                    <div class="thumbnail" (click)="showVideo(item)">
+                    <div class="thumb video" (click)="showVideo(item)">
                       <img [src]="context + '/assets/thumbnail-video.png'" alt="Video">
                       <div class="caption">
                         <h4 class="media-heading">{{item.name}}</h4>
@@ -281,7 +281,7 @@
               <div class="image-list-container">
                 <ul class="list-group row">
                   <li *ngFor="let item of page.results" class="list-group-item col-xs-3">
-                    <div class="thumbnail" (click)="showVideo(item)">
+                    <div class="thumb video" (click)="showVideo(item)">
                       <img [src]="context + '/assets/thumbnail-video.png'" alt="Video">
                       <div class="caption">
                         <h4 class="media-heading">{{item.name}}</h4>
