feat: processing videos with ODM

--- a/uasdm-ui/src/app/site/component/classification/classifications.component.html
+++ b/uasdm-ui/src/app/site/component/classification/classifications.component.html
@@ -8,7 +8,7 @@
 
 <!-- 	<div id="app-container" class="container"> -->
 
-		<h4>{{_metadata.title}}</h4>
+		<!-- <h4>{{_metadata.title}}</h4> -->
 
 		<generic-table *ngIf="config != null" [cols]="cols" [config]="config" [refresh]="refresh" [baseUrl]="_metadata.baseUrl" (click)="onClick($event)"></generic-table>		
 <!-- 	</div> -->
