--- a/uasdm-ui/src/app/site/component/equipment/equipment.component.html
+++ b/uasdm-ui/src/app/site/component/equipment/equipment.component.html
@@ -34,7 +34,7 @@
         <br><br>
         
         <h3 class="settings-subheader">Plaform Options</h3>
-        <section style="border:solid 1px lightgrey;background:#efefef;">
+        <section style="padding:20px;border:solid 1px lightgrey;background:#efefef;">
         
             <a (click)="isPlatformTypeCollapsed = !isPlatformTypeCollapsed">
                 <h4><i class="fa fa-fw collapsible-link" [ngClass]="{'fa-chevron-down': !isPlatformTypeCollapsed, 'fa-chevron-right': isPlatformTypeCollapsed}"></i>Platform Types</h4>
