--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -19,8 +19,8 @@
     <div *ngIf="entity != null">
       <div class="row">
         <div class="col-md-12">
-          <h2>{{entity.name}} <span *ngIf="!entity.metadataUploaded" class="dot pending"
-              style="margin-left: 0;margin-bottom: 5px;"></span></h2>
+          <h2>{{entity.name}} <span *ngIf="!entity.metadataUploaded" style="margin-left: 0;margin-bottom: 5px;"></span>
+          </h2>
         </div>
       </div>
 
@@ -167,21 +167,22 @@
                   <li
                     *ngFor="let item of page.results | paginate: { itemsPerPage: page.pageSize, currentPage: page.pageNumber, totalItems: page.count }"
                     class="list-group-item col-3">
-                    <a class="thumb d-block text-decoration-none text-reset"
+                    <a class="d-block text-decoration-none text-reset mx-auto d-block"
                       [ngClass]="{'card-disabled' : item.exclude, 'non-clickable' : !enableSelectableImages}">
                       <input type="checkbox" class="x-box" *ngIf="enableSelectableImages" [checked]="item.exclude"
-                        (change)="toggleExcludeImage($event, item)" [title]="item.exclude ? 'Include image in processing' : 'Exclude image from processing'" style="cursor: pointer;" />
-                      <img class="mx-auto d-block" style="max-height: 150px"
-                        (click)="previewImage(item)"
-                        [ngClass]="{'img-disabled' : item.exclude}"
-                        [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : (context + '/assets/thumbnail-default.png')"
-                        title="View or download image"
-                        alt="Image">
-                      <div class="caption">
-                        <h4 class="media-heading">
+                        (change)="toggleExcludeImage($event, item)"
+                        [title]="item.exclude ? 'Include image in processing' : 'Exclude image from processing'"
+                        style="cursor: pointer;" />
+                      <figure class="figure ">
+                        <img class="thumb figure-img img-fluid rounded" style="max-height: 150px"
+                          (click)="previewImage(item)" [ngClass]="{'img-disabled' : item.exclude}"
+                          [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : (context + '/assets/thumbnail-default.png')"
+                          title="View or download image" alt="Image">
+                        <figcaption class="figure-caption">
                           {{item.name}}
-                        </h4>
-                      </div>
+                        </figcaption>
+                      </figure>
+
                     </a>
                   </li>
                 </ul>
@@ -314,7 +315,7 @@
           <div class="btn-holder" style="margin: 20px 0px 10px 0px;">
 
             <div class="d-flex flex-row">
-              <div >
+              <div>
                 <button type="button" class="btn btn-warning" [disabled]="processRunning" (click)="editMetadata()">
                   <i class="fa fa-edit" style="color:white"></i>
                   Edit Metadata
