--- a/uasdm-ui/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-ui/src/app/site/component/sensor/sensor.component.html
@@ -48,7 +48,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label class="form-label">Valid Collection Formats</label>
+        <label class="form-label">Formats Captured With This Sensor</label>
 
         <span *ngIf="!sensor.collectionFormats || sensor.collectionFormats.length === 0"
               class="error-message">
@@ -69,11 +69,16 @@
           {{ getFormatLabel(fmt) }}<span *ngIf="!last">, </span>
         </span>
       </div>
+      
       <div class="form-group">
+      	<label class="form-label">Location Tracking</label>
+      
         <boolean-field [value]="sensor.hasGeologger" (valueChange)="sensor.hasGeologger = $event"
           [label]="'Has GeoLogger'" [disabled]="mode === 'READ'"></boolean-field>
       </div>
       <div class="form-group">
+        <label class="form-label">Resolution</label>
+      
         <boolean-field [value]="sensor.highResolution" (valueChange)="sensor.highResolution = $event"
           [label]="'High Resolution'" [disabled]="mode === 'READ'"></boolean-field>
       </div>
