chore: moved logged in information to the right

--- a/uasdm-ui/src/app/shared/component/header/header.component.html
+++ b/uasdm-ui/src/app/shared/component/header/header.component.html
@@ -14,7 +14,7 @@
       <!-- <p class="navbar-brand" style="margin: 0;" >{{title}}</p> -->
 
 
-      <span class="navbar-text">
+      <span class="navbar-text" style="right: 50px; position: absolute;">
         Logged in as <b style="color: white;">{{userName}}</b>
       </span>
 
