--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -20,6 +20,12 @@
       </div>
       <div class="col-md-2"></div>
     </div>
+
+	<span *ngIf="loading">
+		<h4>
+			<i class="fa fa-spinner fa-spin" aria-hidden="true"></i>
+		</h4>
+	</span>
     
     <div *ngIf="config" class="card border border-secondary mb-2">
     	<div class="card-header bg-secondary">
