--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -169,7 +169,11 @@
                     class="list-group-item col-3">
                     <a class="d-block text-decoration-none text-reset mx-auto d-block"
                       [ngClass]="{'card-disabled' : item.exclude, 'non-clickable' : !enableSelectableImages}">
-                      <input type="checkbox" class="x-box" *ngIf="enableSelectableImages" [checked]="item.exclude"
+                      <i class="image-action download fa fa-download"
+                        (click)="handleDownloadFile(item)"
+                        title="Download image"
+                        style="cursor: pointer;"></i>
+                      <input type="checkbox" class="image-action exclude" *ngIf="enableSelectableImages" [checked]="item.exclude"
                         (change)="toggleExcludeImage($event, item)"
                         [title]="item.exclude ? 'Include image in processing' : 'Exclude image from processing'"
                         style="cursor: pointer;" />
