--- a/uasdm-ui/src/app/site/component/modal/run-process-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-process-modal.component.html
@@ -124,6 +124,9 @@
 					<option value="LOW">LOW</option>
 					<option value="LOWEST">LOWEST</option>
 				</select>
+				<div class="form-text">
+					Setting feature quality to higher settings will significantly increase the time to process.
+				</div>
 			</div>
 
 			<div *ngIf="config.radiometricCalibration && (isRadiometric() || isMultispectral())" class="form-group">
