feat(help): new help section for viewing documentation and submitting tickets

--- a/uasdm-ui/src/app/admin/component/system/system-info.component.html
+++ b/uasdm-ui/src/app/admin/component/system/system-info.component.html
@@ -19,12 +19,11 @@
         </ul>
         
         <h3 class="settings-subheader">
-            Documentation
+            Release Notes
         </h3>
         
         <ul>
-            <li><a href="https://terraframe.atlassian.net/l/c/iHQKhY3Q" target="_blank">IDM Documentation</a></li>
-            <li><a href="https://geoplatform.atlassian.net/wiki/spaces/BETC" target="_blank">GeoPlatform Documentation</a> (Access issued through the DOI)</li>
+            <li><a href="https://github.com/terraframe/osmre-uav/blob/master/CHANGELOG.md" target="_blank">View Release Notes (on Github)</a></li>
         </ul>
         
     </div>
