--- a/uasdm-ui/src/app/site/component/help/help.component.html
+++ b/uasdm-ui/src/app/site/component/help/help.component.html
@@ -35,7 +35,7 @@
                         </p>
                         <button class="btn btn-sm btn-outline-secondary"
                                 (click)="copy(reportEmail)">
-                            <i class="fa-regular fa-copy"></i> Copy
+                            <i class="fa-regular fa-copy"></i> Copy Address
                         </button>
                         </div>
 
@@ -46,7 +46,7 @@
                         <h6 class="fw-semibold mb-0">Subject:</h6>
                         <button class="btn btn-sm btn-outline-secondary"
                                 (click)="copy(subjectTemplate.innerText)">
-                            <i class="fa-regular fa-copy"></i> Copy
+                            <i class="fa-regular fa-copy"></i> Copy Subject
                         </button>
                         </div>
                         <pre #subjectTemplate class="bg-light p-2 border rounded mt-1">Bug Report: &lt;short description of issue&gt;</pre>
@@ -56,7 +56,7 @@
                         <h6 class="fw-semibold mb-0">Body:</h6>
                         <button class="btn btn-sm btn-outline-secondary"
                                 (click)="copy(bodyTemplate.innerText)">
-                            <i class="fa-regular fa-copy"></i> Copy
+                            <i class="fa-regular fa-copy"></i> Copy Body
                         </button>
                         </div>
 
