chore: style of warning in run process modal

--- a/uasdm-ui/src/app/site/component/modal/run-process-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-process-modal.component.html
@@ -124,7 +124,7 @@
 					<option value="LOW">LOW</option>
 					<option value="LOWEST">LOWEST</option>
 				</select>
-				<div class="form-text">
+				<div class="form-text alert alert-warning">
 					Setting feature quality to higher settings will significantly increase the time to process.
 				</div>
 			</div>
