chore: fixed issue where hillshade was not mapping when viewing products at high levels of the hierarchy

--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -338,7 +338,9 @@
                   <tab heading="Products" (selectTab)="activeTab = 'Products'">
                     <product-panel *ngIf="activeTab === 'Products'" [selection]="current" [organization]="organization"
                       [filter]="filter" [views]="views" (onViewsChange)="handleProductsChange($event)"
-                      (toggleMapOrtho)="handleMapOrtho($event)" (toggleMapDem)="handleMapDem($event)"></product-panel>
+                      (toggleMapOrtho)="handleMapOrtho($event)" 
+                      (toggleMapDem)="handleMapDem($event)">
+                    </product-panel>
                   </tab>
                 </tabset>
 
@@ -350,7 +352,9 @@
                   <tab heading="Products" (selectTab)="activeTab = 'Products'">
                     <product-panel *ngIf="activeTab === 'Products'" [selection]="current" [organization]="organization"
                       [filter]="filter" [views]="views" (onViewsChange)="handleProductsChange($event)"
-                      (toggleMapOrtho)="handleMapOrtho($event)"></product-panel>
+                      (toggleMapOrtho)="handleMapOrtho($event)"
+                      (toggleMapDem)="handleMapDem($event)">
+                    </product-panel>
                   </tab>
                 </tabset>
 
