--- a/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/odmrun-modal.component.html
@@ -79,7 +79,7 @@
 	        </div>
 	
 	        <div class="form-group">
-	            <label for="matcherNeighbors">Matcher Nieghbors</label>
+	            <label for="matcherNeighbors">Matcher Neighbors</label>
 	            <input [(ngModel)]="config.matcherNeighbors" name="matcherNeighbors" type="number" class="form-control"
 	                placeholder="0" step="1" min="0" disabled />
 	        </div>
