--- a/uasdm-ui/src/styles/styles.scss
+++ b/uasdm-ui/src/styles/styles.scss
@@ -206,7 +206,7 @@ a.thumbnail.non-clickable:focus {
 }
 
 .image-preview-container {
-  text-align: right;
+  text-align: center;
 }
 
 .image-preview-container>.fa.fa-times.btn.btn-close {
